Docker fixes, and text formatting

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -25,6 +25,7 @@ services:
       - /app/node_modules   
     environment:
       NODE_ENV: development
+      BACKEND: http://back:8000
     depends_on:
       - back
     restart: unless-stopped
